Added standalone installer support, so no JRE/JDK is needed, and installing is very simple. This is using Inno Setup to make the installer and everyting else