@@ -43,12 +43,6 @@ sass {
     cssDir = 'src/main/resources'
 }
 
-idea {
-    module {
-        inheritOutputDirs = true
-    }
-}
-
 mainClassName = 'com.uddernetworks.mspaint.main.JFXWorkaround'
 
 jar {
@@ -58,33 +52,9 @@ jar {
     }
 }
 
-shadowJar {
-    zip64 true
+configurations {
+    javafxCompile
 }
-
-javafx {
-    modules = [ 'javafx.controls', 'javafx.fxml' ]
-}
-
-applicationDefaultJvmArgs = [
-        "--add-exports=javafx.base/com.sun.javafx=ALL-UNNAMED",
-        "--add-exports=javafx.base/com.sun.javafx.beans=ALL-UNNAMED",
-        "--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
-        "--add-exports=javafx.base/com.sun.javafx.collections=ALL-UNNAMED",
-        "--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED",
-        "--add-exports=javafx.base/com.sun.javafx.logging=ALL-UNNAMED",
-        "--add-exports=javafx.base/com.sun.javafx.reflect=ALL-UNNAMED",
-        "--add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED",
-        "--add-exports=javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED",
-        "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
-        "--add-exports=javafx.graphics/com.sun.javafx.scene.input=ALL-UNNAMED",
-        "--add-exports=javafx.graphics/com.sun.javafx.scene.layout=ALL-UNNAMED",
-        "--add-exports=javafx.graphics/com.sun.javafx.scene.text=ALL-UNNAMED",
-        "--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED",
-        "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
-        "--add-exports=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED",
-        "--add-exports=javafx.graphics/com.sun.javafx.util=ALL-UNNAMED"
-]
 
 dependencies {
     compile group: 'com.intellij', name: 'forms_rt', version:'7.0.3'
@@ -98,6 +68,13 @@ dependencies {
     compile 'com.uddernetworks.newocr:NewOCR:1.2.0'
     compile group: 'org.apache.xmlgraphics', name: 'batik-rasterizer', version: '1.10'
     compile 'org.ocpsoft.prettytime:prettytime:4.0.2.Final'
+
+    javafxCompile "org.openjfx:javafx-base:11.0.2:win"
+    javafxCompile "org.openjfx:javafx-graphics:11.0.2:win"
+    javafxCompile "org.openjfx:javafx-controls:11.0.2:win"
+    javafxCompile "org.openjfx:javafx-fxml:11.0.2:win"
+
+    compile configurations.javafxCompile
 }
 
 task preLaunch << {
@@ -113,3 +90,9 @@ task replaceStuff << {
 }
 
 preLaunch.finalizedBy replaceStuff
+
+task copyDependencies(type: Copy) {
+    from configurations.runtime - configurations.javafxCompile
+    from jar
+    into "${buildDir}/libraries"
+}
